@@ -101,4 +101,5 @@ splint:
 	(cd $(srcdir)/smdevtools && $(MAKE) splint $(AM_MAKEFLAGS))
 	(cd $(srcdir)/pysmdev && $(MAKE) splint $(AM_MAKEFLAGS))
 	(cd $(srcdir)/po && $(MAKE) splint $(AM_MAKEFLAGS))
+	(cd $(srcdir)/tests && $(MAKE) splint $(AM_MAKEFLAGS))
 
