@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libsmdev],
- [20140525],
+ [20140527],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -96,15 +96,26 @@ AX_COMMON_CHECK_ENABLE_DEBUG_OUTPUT
 dnl Check if libsmdev python bindings (pysmdev) should be build
 AX_PYTHON_CHECK_ENABLE
 
-dnl Check if DLL support is needed in smdevtools
+dnl Check if DLL support is needed
 AS_IF(
- [test x"$enable_shared" = xyes],
+ [test "x$enable_shared" = xyes],
  [AS_CASE(
   [$host],
   [*cygwin* | *mingw*],
-  [AC_SUBST(
-   [LIBSMDEV_DLL_IMPORT],
-   ["-DLIBSMDEV_DLL_IMPORT"])
+  [AC_DEFINE(
+   [HAVE_DLLMAIN],
+   [1],
+   [Define to 1 to enable the DllMain function.])
+  AC_SUBST(
+   [HAVE_DLLMAIN],
+   [1])
+
+  AS_IF(
+   [test "x$ac_cv_enable_static_executables" = xno],
+   [AC_SUBST(
+    [LIBSMDEV_DLL_IMPORT],
+    ["-DLIBSMDEV_DLL_IMPORT"])
+   ])
   ])
  ])
 
